# favicon-picker

./: Cargo.toml  README.md
examples/: download.rs  simple.rs
src/: error.rs  favicon.rs  icons_from_html.rs  lib.rs  selectors.rs
