[package]
name = "favicon-picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
reqwest = "0"
scraper = "0"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1"
url = "2"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1.37.0", features = ["rt", "macros"] }

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]
serde = ["dep:serde"]
