[package]
name = "favicon-picker"
version = "1.0.0"
edition = "2021"
authors = ["tonymushah tonymushahdev06@yahoo.com"]
description = "A library for getting favicon from websites"
repository = "https://github.com/tonymushah/favicon-picker"
readme = "./README"
categories = ["favicon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
reqwest = "0"
scraper = "0"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1"
url = "2"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1.37.0", features = ["rt", "macros"] }

[features]
default = ["non_exhaustive"]
non_exhaustive = []
blocking = ["reqwest/blocking"]
serde = ["dep:serde"]
